// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Providers: ConfigProvider: operatorConfigs should provide operator config 1`] = `
Array [
  Object {
    "operands": 1,
    "type": "has_any_word",
    "verboseName": "has any of the words",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_all_words",
    "verboseName": "has all of the words",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_phrase",
    "verboseName": "has the phrase",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_only_phrase",
    "verboseName": "has only the phrase",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_beginning",
    "verboseName": "starts with",
  },
  Object {
    "categoryName": "Has Text",
    "operands": 0,
    "type": "has_text",
    "verboseName": "has some text",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "categoryName": "Has Number",
    "operands": 0,
    "type": "has_number",
    "verboseName": "has a number",
  },
  Object {
    "operands": 2,
    "type": "has_number_between",
    "verboseName": "has a number between",
  },
  Object {
    "operands": 1,
    "type": "has_number_lt",
    "verboseName": "has a number below",
  },
  Object {
    "operands": 1,
    "type": "has_number_lte",
    "verboseName": "has a number at or below",
  },
  Object {
    "operands": 1,
    "type": "has_number_eq",
    "verboseName": "has a number equal to",
  },
  Object {
    "operands": 1,
    "type": "has_number_gte",
    "verboseName": "has a number at or above",
  },
  Object {
    "operands": 1,
    "type": "has_number_gt",
    "verboseName": "has a number above",
  },
  Object {
    "categoryName": "Has Date",
    "operands": 0,
    "type": "has_date",
    "verboseName": "has a date",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_date_lt",
    "verboseName": "has a date before",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_date_eq",
    "verboseName": "has a date equal to",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_date_gt",
    "verboseName": "has a date after",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_run_status",
    "verboseName": "has a run status of",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_group",
    "verboseName": "is in the group",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "categoryName": "Has Phone",
    "operands": 0,
    "type": "has_phone",
    "verboseName": "has a phone number",
  },
  Object {
    "categoryName": "Has Email",
    "operands": 0,
    "type": "has_email",
    "verboseName": "has an email",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  Object {
    "categoryName": "Has Error",
    "operands": 0,
    "type": "has_error",
    "verboseName": "has an error",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "categoryName": "Not Empty",
    "operands": 0,
    "type": "has_value",
    "verboseName": "is not empty",
  },
  Object {
    "operands": 0,
    "type": "has_wait_timed_out",
    "verboseName": null,
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "operands": 1,
    "type": "has_pattern",
    "verboseName": "matches regex",
  },
]
`;

exports[`Providers: ConfigProvider: operatorConfigs should provide operator config 2`] = `
Object {
  "has_all_words": Object {
    "operands": 1,
    "type": "has_all_words",
    "verboseName": "has all of the words",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_any_word": Object {
    "operands": 1,
    "type": "has_any_word",
    "verboseName": "has any of the words",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_beginning": Object {
    "operands": 1,
    "type": "has_beginning",
    "verboseName": "starts with",
  },
  "has_date": Object {
    "categoryName": "Has Date",
    "operands": 0,
    "type": "has_date",
    "verboseName": "has a date",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_date_eq": Object {
    "operands": 1,
    "type": "has_date_eq",
    "verboseName": "has a date equal to",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_date_gt": Object {
    "operands": 1,
    "type": "has_date_gt",
    "verboseName": "has a date after",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_date_lt": Object {
    "operands": 1,
    "type": "has_date_lt",
    "verboseName": "has a date before",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_email": Object {
    "categoryName": "Has Email",
    "operands": 0,
    "type": "has_email",
    "verboseName": "has an email",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_error": Object {
    "categoryName": "Has Error",
    "operands": 0,
    "type": "has_error",
    "verboseName": "has an error",
    "visibility": Array [
      "-",
    ],
  },
  "has_group": Object {
    "operands": 1,
    "type": "has_group",
    "verboseName": "is in the group",
    "visibility": Array [
      "-",
    ],
  },
  "has_number": Object {
    "categoryName": "Has Number",
    "operands": 0,
    "type": "has_number",
    "verboseName": "has a number",
  },
  "has_number_between": Object {
    "operands": 2,
    "type": "has_number_between",
    "verboseName": "has a number between",
  },
  "has_number_eq": Object {
    "operands": 1,
    "type": "has_number_eq",
    "verboseName": "has a number equal to",
  },
  "has_number_gt": Object {
    "operands": 1,
    "type": "has_number_gt",
    "verboseName": "has a number above",
  },
  "has_number_gte": Object {
    "operands": 1,
    "type": "has_number_gte",
    "verboseName": "has a number at or above",
  },
  "has_number_lt": Object {
    "operands": 1,
    "type": "has_number_lt",
    "verboseName": "has a number below",
  },
  "has_number_lte": Object {
    "operands": 1,
    "type": "has_number_lte",
    "verboseName": "has a number at or below",
  },
  "has_only_phrase": Object {
    "operands": 1,
    "type": "has_only_phrase",
    "verboseName": "has only the phrase",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_pattern": Object {
    "operands": 1,
    "type": "has_pattern",
    "verboseName": "matches regex",
  },
  "has_phone": Object {
    "categoryName": "Has Phone",
    "operands": 0,
    "type": "has_phone",
    "verboseName": "has a phone number",
  },
  "has_phrase": Object {
    "operands": 1,
    "type": "has_phrase",
    "verboseName": "has the phrase",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_run_status": Object {
    "operands": 1,
    "type": "has_run_status",
    "verboseName": "has a run status of",
    "visibility": Array [
      "-",
    ],
  },
  "has_text": Object {
    "categoryName": "Has Text",
    "operands": 0,
    "type": "has_text",
    "verboseName": "has some text",
    "visibility": Array [
      "M",
      "S",
    ],
  },
  "has_value": Object {
    "categoryName": "Not Empty",
    "operands": 0,
    "type": "has_value",
    "verboseName": "is not empty",
  },
  "has_wait_timed_out": Object {
    "operands": 0,
    "type": "has_wait_timed_out",
    "verboseName": null,
    "visibility": Array [
      "-",
    ],
  },
}
`;
